<resources>
    <string name="app_name">Mentor</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="enter_email_to_recover_pwd">Enter your email to recover your password.
        You\'ll get a recovery link on your registered email.</string>
    <string name="submit">Submit</string>
    <string name="hint_email">Email</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="empty_old_password">Please enter your old password.</string>
    <string name="empty_new_password">Please enter your new password.</string>
    <string name="invalid_new_password">Your new password should contain 6–15 characters.</string>
    <string name="password_not_matched">Your password didn\'t match.</string>
    <string name="dialog">dialog</string>
    <string name="ok">OK</string>
    <string name="action_okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="retrofit_failure">There might be some problem please try again later.</string>
    <string name="hint_search">Search…</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="session_expired">Your session is expired, please login again to continue.</string>
    <string name="storage_permission_needed">You need to grant read/write external
        storage permission in order to access media.</string>
    <string name="enable_storage_permission">You should enable your storage permission
        in the settings for better experience.</string>
    <string name="location_permission_needed">You need to grant location  permission in order to use the app features.</string>
    <string name="enable_location_permission">You should enable your location permission
        in the settings for better experience.</string>
    <string name="enable_camera_permission">You should enable your camera permission
        in the settings for better experience.</string>
    <string name="reading_contacts_permission_required">You should enable read contacts
        permission to get recommendations from your phonebook contacts.</string>
    <string name="enable_read_contacts_permission">You should enable read contacts
        permission in the app settings.</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="processing_image">Processing Image…</string>
    <string name="share_via">Share via</string>
    <string name="empty_first_name">Please enter name</string>
    <string name="empty_last_name">Please enter last name</string>
    <string name="st_welcome_back">Welcome back!</string>
    <string name="st_hello_again_you_ve_been_missed">Hello again, You’ve been missed!</string>
    <string name="st_email_address">Email Address</string>
    <string name="st_password">Password</string>
    <string name="st_forgot_password">Forgot Password?</string>
    <string name="st_login">Login</string>
    <string name="empty_otp">Please enter otp</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="st_next">Next</string>
    <string name="st_info_header_1">Your Solution Starts Here</string>
    <string name="st_info_tagline_1">Whether you need expert advice or offer it — Mentor connects customers and professionals for instant, virtual support.</string>
    <string name="st_info_header_2">Trusted professionals</string>
    <string name="st_info_tagline_2">Connect with reliable professionals for every your all basic and necessary needs</string>
    <string name="st_info_tagline_3">Effortlessly connect with the right professionals, whether you need advice or hands-on help.</string>
    <string name="st_info_header_3">Service Made Simple</string>
    <string name="st_as_a_customer">As a Customer</string>
    <string name="st_as_a_professional">As a Professional</string>
    <string name="st_continue">Continue</string>
    <string name="st_sign_in">Sign In</string>
    <string name="st_hi_we_are_glad_you_are_here">Hi! We are glad you are here.</string>
    <string name="st_phone_number">Phone Number</string>
    <string name="st_login_with_face_id">Login with Face ID</string>
    <string name="st_dont_have_an_account">Don’t have an account?
        <annotation id="0">Sign up</annotation></string>
    <string name="already_have_an_account">Already have an account?
        <annotation id="0">Sign In</annotation></string>
    <string name="st_or_continue_with">or continue with</string>
    <string name="st_get_verification_code">Get Verification Code</string>
    <string name="st_sign_up">Sign Up</string>
    <string name="st_fill_information_below_to_create_new_account">Fill information below to create new account.</string>
    <string name="st_add_profile_picture">Add Profile Picture</string>
    <string name="st_name">Name</string>
    <string name="st_email">Email</string>
    <string name="st_verification">Verification</string>
    <string name="st_otp_verification_tagline">We’ve send you a 4 digit verification code on your registered mobile number.</string>
    <string name="st_verify_otp">Verify OTP</string>
    <string name="st_re_send_code_in">Re-send code in</string>
    <string name="st_home">Home</string>
    <string name="st_my_bookings">My Bookings</string>
    <string name="st_profile">Profile</string>
    <string name="st_search">Search....</string>
    <string name="st_upcoming_bookings">Upcoming Bookings</string>
    <string name="st_past_bookings">Past Bookings</string>
    <string name="st_booking_id">Booking ID:&#160;</string>
    <string name="st_cancel_booking">Cancel Booking</string>
    <string name="st_my_profile">My Profile</string>
    <string name="st_edit_profile">Edit Profile</string>
    <string name="st_privacy_policies">Privacy Policies</string>
    <string name="st_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="st_contact_us">Contact Us</string>
    <string name="st_delete_account">Delete Account</string>
    <string name="st_logout">Logout</string>
    <string name="st_enter_location">Enter Location</string>
    <string name="st_available_worker_s">Available Worker’s</string>
    <string name="st_filter_by">Filter By</string>
    <string name="st_filter">Filter</string>
    <string name="st_distance">Distance</string>
    <string name="st_price_range">Price Range</string>
    <string name="st_ratings">Ratings</string>
    <string name="st_apply_filter">Apply Filters</string>
    <string name="st_how_would_you_like_to_continue">How would you like to Continue</string>
    <string name="st_certifications_license"><![CDATA[Certifications & License]]></string>
    <string name="st_previous_work">Previous Work</string>
    <string name="st_view_all">View All</string>
    <string name="st_reviews_from_clients">Reviews from clients</string>
    <string name="st_book_now">Book Now</string>
    <string name="st_all_reviews">All Reviews</string>
    <string name="st_when_would_you_like_your_service">When would you like your service?</string>
    <string name="st_select_date">Select Date</string>
    <string name="st_select_time_slot">Select Time Slot</string>
    <string name="st_answer_a_few_quick_questions_to_help_us_understand_your_needs_better_it_only_takes_a_moment">Answer a few quick questions to help us understand your needs better. It only takes a moment!</string>
    <string name="st_what_device_are_you_having_issues_with_e_g_laptop_desktop_router">What device are you having issues with (e.g., laptop, desktop, router)?</string>
    <string name="st_describe_your_problem">Describe your problem</string>
    <string name="st_is_it_a_hardware_or_software_issue">Is it a hardware or software issue?</string>
    <string name="st_have_you_tried_any_troubleshooting_steps_so_far">Have you tried any troubleshooting steps so far?</string>
    <string name="st_general_question_4">General Question 4</string>
    <string name="st_help_us_tailor_your_service">Help us tailor your service</string>
    <string name="st_booking_confirmation">Booking Confirmation</string>
    <string name="st_confirm_booking">Confirm Booking</string>
    <string name="st_network_setup_repair"><![CDATA[Network Setup & Repair]]></string>
    <string name="st_video_consultation">Video Consultation</string>
    <string name="st_date">Date</string>
    <string name="st_time">Time</string>
    <string name="st_price">Price</string>
    <string name="st_total_price">Total Price</string>
    <string name="st_payment_successful">Payment Successful!</string>
    <string name="st_your_booking_is_confirmed_with_christan_gray_enjoy_your_service">Your booking is confirmed with Christan Gray. Enjoy your service.</string>
    <string name="st_show_my_booking">Show my Booking</string>
    <string name="st_rate_order">Rate Order</string>
    <string name="st_service_details">Service Details</string>
    <string name="st_price_details">Price Details</string>
    <string name="st_book_again">Book Again</string>
    <string name="st_booking_detail">Booking Detail</string>
    <string name="st_join_booking_session">Join Booking Session</string>
    <string name="st_re_schedule_booking">Re-schedule Booking</string>
    <string name="st_no_continue">No, Continue searching</string>
    <string name="st_are_you_sure_you_want_to_cancel_your_booking_with">Are you sure you want to cancel your booking with</string>
    <string name="st_are_you_sure_you_want_to_cancel_your_booking_request">Are you sure you want to cancel your booking request</string>
    <string name="st_yes_cancel">Yes, Cancel</string>
    <string name="st_rate_your_experience">Rate your experience</string>
    <string name="st_we_would_love_to_hear_from_you">We would love to hear from you</string>
    <string name="st_submit">Submit</string>
    <string name="st_change_profile_picture">Change Profile Picture</string>
    <string name="st_save_changes">Save Changes</string>
    <string name="st_your_name">Your Name</string>
    <string name="st_what_do_you_want_to_tell_us_about">What do you want to tell us about?</string>
    <string name="st_start_typing">Start typing…</string>
    <string name="st_contact_request">Contact Request</string>
    <string name="st_your_request_has_been_received_our_experts_will_try_to_contact_you_soon">Your request has been received. Our experts will try to contact you soon!</string>
    <string name="st_great">Great</string>
    <string name="st_logout_account">Logout Account</string>
    <string name="st_are_you_sure_you_want_to_logout_of_the_app">Are you sure you want to Logout of the app!</string>
    <string name="st_yes_logout">Yes, Logout</string>
    <string name="st_yes_delete">Yes, Delete</string>
    <string name="st_not_now">Not now</string>
    <string name="st_select_time">Select Time</string>
    <string name="st_start_time">Start Time</string>
    <string name="st_end_time">End Time</string>
    <string name="st_duration">Duration</string>
    <string name="st_slots_generated">Slots generated</string>
    <string name="st_cancel">Cancel</string>
    <string name="st_generate_slot">Generate</string>
    <string name="st_no_provider_found">No Provider Found</string>
    <string name="st_we_could_t_find_a_provider_for_your_request_please_try_again_or_go_back_to_refine_your_search">We could\'t find a provider for your request. Please try again or go back to refine your search</string>
    <string name="st_go_back">Go Back</string>
    <string name="st_request_again">Request Again</string>
</resources>