<?xml version="1.0" encoding="utf-8"?>
<com.mentor.application.views.comman.utils.SlidingConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/toolbar"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        style="@style/StyleMedium"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_headline_margin"
        android:text="@string/st_your_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        style="@style/StyleInputEditText"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_item_margin"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        style="@style/StyleMedium"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_default_margin"
        android:text="@string/st_email"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/StyleInputEditText"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_item_margin"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        style="@style/StyleMedium"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_default_margin"
        android:text="@string/st_what_do_you_want_to_tell_us_about"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        style="@style/StyleInputEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:lines="4"
        android:gravity="top"
        android:imeOptions="actionDone"
        android:paddingVertical="@dimen/fragment_medium_margin"
        android:hint="@string/st_start_typing"
        android:layout_marginTop="@dimen/fragment_item_margin"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/StyleSubmitButton"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintStart_toStartOf="@id/etName"
        app:layout_constraintBottom_toBottomOf="parent"/>

</com.mentor.application.views.comman.utils.SlidingConstraintLayout>