<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/drawable_color_white_rounded_corners_solid"
        android:padding="@dimen/body_margin"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_vendor_found"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/StyleBold"
            android:layout_marginTop="@dimen/fragment_menu_item_margin"
            android:text="@string/st_no_provider_found"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <TextView
            android:id="@+id/tvTagline"
            style="@style/StyleRegular"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/body_margin"
            android:gravity="center"
            android:text="@string/st_we_could_t_find_a_provider_for_your_request_please_try_again_or_go_back_to_refine_your_search"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorEditTextStroke"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSearchAgain"
            style="@style/StyleSubmitButton"
            android:layout_marginTop="@dimen/body_margin"
            android:elevation="8dp"
            android:text="@string/st_request_again"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTagline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGoBack"
            style="@style/StyleMedium"
            android:layout_marginTop="@dimen/fragment_medium_margin"
            android:gravity="center_vertical"
            android:text="@string/st_go_back"
            android:visibility="visible"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSearchAgain" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>